--- a/modules/core/arrow-test/build.gradle
+++ b/modules/core/arrow-test/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile project(':arrow-optics')
     compile project(':arrow-fx')
-    compile project(':arrow-mtl-data')
+    compile project(':arrow-mtl')
     compile project(':arrow-free-data')
     compile project(":arrow-recursion-data")
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
