--- a/arrow-version/_data/sidebar.yml
+++ b/arrow-version/_data/sidebar.yml
@@ -28,22 +28,21 @@ options:
       - title: Id
         url: /docs/arrow/core
 
-  - title: Arrow Fx
+  - title: Arrow Meta
 
     nested_options:
+    
+      - title: All tag example
+        url: /docs/arrow/meta
+    
 
-      - title: Getting Started
-        url: /docs/arrow/fx/
-
-      - title: Asynchronous & Concurrent Programming
-        url: /docs/effects/fx/async/
-
-      - title: Polymorphism. One Program multiple runtimes
-        url: /docs/effects/fx/polymorphism/
 
   - title: Optics
 
     nested_options:
+    
+      - title: All tag example
+        url: /docs/optics/tags 
 
       - title: Optics DSL
         url: /docs/optics/dsl/
@@ -89,6 +88,9 @@ options:
 
       - title: Each
         url: /docs/optics/each/
+        
+      - title: All tag example
+        url: /docs/optics/tags    
 
 
   - title: Arrow Query Language
