--- a/compiler-plugin/build.gradle
+++ b/compiler-plugin/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
-//apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 //compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xskip-runtime-version-check', 'true']
 
@@ -24,12 +24,8 @@ jar {
   }
 }
 
-//shadowJar {
-//  configurations = []
-//  classifier = "embeddable"
-//}
-//
-//// Create embeddable configuration
-//configurations.create("embeddable") {
-//  extendsFrom(configurations.shadow)
-//}
+shadowJar {
+  configurations = [project.configurations.compile]
+  relocate 'org.jetbrains.kotlin.com.intellij', 'com.intellij'
+}
+
