--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -2,11 +2,13 @@ plugins {
     id 'org.jetbrains.intellij' version '0.4.10'
 }
 
+apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.intellij'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile project(":compiler-plugin")
+    compile project(path: ':compiler-plugin', configuration: 'shadow')
 }
 
 compileKotlin {
@@ -27,7 +29,7 @@ jar {
 intellij {
     version = "2019.2.1"
     pluginName = "Arrow plugin"
-    setPlugins("gradle", "org.jetbrains.kotlin:$kotlin_version-release-IJ2019.2-1")
+    setPlugins("gradle", "java", "org.jetbrains.kotlin:$kotlin_version-release-IJ2019.2-1")
 }
 
 patchPluginXml {
