--- a/settings.gradle
+++ b/settings.gradle
@@ -39,6 +39,9 @@ include {
         meta {
             _ 'annotations'
             _ 'meta'
+            _ 'compiler-plugin'
+            _ 'gradle-plugin'
+            _ 'idea-plugin'
         }
 
         core {
