--- a/arrow-site/doc/_data/sidebar-optics.yml
+++ b/arrow-site/doc/_data/sidebar-optics.yml
@@ -47,3 +47,10 @@ options:
 
       - title: Each
         url: /docs/optics/each/
+
+  - title: API Docs
+
+    nested_options:
+
+      - title: Optics
+        url: /docs/apidocs/arrow-optics/
