--- a/arrow-site/doc/_data/sidebar-core.yml
+++ b/arrow-site/doc/_data/sidebar-core.yml
@@ -4,7 +4,7 @@ options:
     nested_options:
 
       - title: Index
-        url: /docs/core
+        url: /docs/core/
 
       - title: Libraries
         url: /docs/quickstart/libraries/
@@ -17,64 +17,6 @@ options:
 
       - title: Projects & Examples
         url: /docs/quickstart/projects/
-
-  - title: API Docs
-
-    nested_options:
-
-      - title: Type Classes
-        url: /docs/apidocs/arrow-typeclasses/
-
-      - title: Core Data Types
-        url: /docs/apidocs/arrow-core-data/
-
-      - title: Effects
-        url: /docs/apidocs/arrow-effects-data/
-
-      - title: Effects Extensions
-        url: /docs/apidocs/arrow-effects-extensions/
-
-      - title: Effects Coroutines
-        url: /docs/apidocs/arrow-effects-kotlinx-coroutines-data/
-
-      - title: Effects Coroutines Extensions
-        url: /docs/apidocs/arrow-effects-kotlinx-coroutines-extensions/
-
-      - title: Effects Rx2
-        url: /docs/apidocs/arrow-effects-rx2-data/
-
-      - title: Effects Rx2 Extensions
-        url: /docs/apidocs/arrow-effects-rx2-extensions/
-
-      - title: Effects Reactor
-        url: /docs/apidocs/arrow-effects-reactor-data/
-
-      - title: Effects Reactor Extensions
-        url: /docs/apidocs/arrow-effects-reactor-extensions/
-
-      - title: Streams
-        url: /docs/apidocs/arrow-streams/
-
-      - title: MTL
-        url: /docs/apidocs/arrow-mtl/
-
-      - title: Optics
-        url: /docs/apidocs/arrow-optics/
-
-      - title: Recursion
-        url: /docs/apidocs/arrow-recursion-data/
-
-      - title: Recursion Extensions
-        url: /docs/apidocs/arrow-recursion-extensions/
-
-      - title: Generic
-        url: /docs/apidocs/arrow-generic/
-
-      - title: Free
-        url: /docs/apidocs/arrow-free-data/
-
-      - title: Validation
-        url: /docs/apidocs/arrow-validation/
 
   - title: Patterns
 
@@ -334,6 +276,22 @@ options:
 
       - title: KindedJ
         url: /docs/integrations/kindedj/
+
+  - title: API Docs
+
+    nested_options:
+
+      - title: Type Classes
+        url: /docs/apidocs/arrow-typeclasses/
+
+      - title: Core Data Types
+        url: /docs/apidocs/arrow-core-data/
+
+      - title: Streams
+        url: /docs/apidocs/arrow-streams/
+
+      - title: Validation
+        url: /docs/apidocs/arrow-validation/
 
   - title: Legal
 
