--- a/arrow-site/doc/_data/sidebar-incubator.yml
+++ b/arrow-site/doc/_data/sidebar-incubator.yml
@@ -83,6 +83,19 @@ options:
       - title: Fix
         url: /docs/recursion/fix/
 
+  - title: Type Classes
+
+    nested_options:
+
+      - title: MonadReader
+        url: /docs/arrow/mtl/typeclasses/monadreader/
+
+      - title: MonadWriter
+        url: /docs/arrow/mtl/typeclasses/monadwriter/
+
+      - title: MonadState
+        url: /docs/arrow/mtl/typeclasses/monadstate/
+
   - title: API Docs
 
     nested_options:
