Create one step where all doc is generated

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ jdk:
 - oraclejdk8
 
 stages:
-  - name: build
-  - name: dokka
-  - name: ank
-  - name: from md to html
+  #- name: build
+  - name: doc
   - name: deploy
     if: branch = master AND type != pull_request
 
@@ -21,15 +19,13 @@ jobs:
   include:
   - stage: build
     script: ./gradlew clean build :arrow-benchmarks-fx:jmhClasses
-  - stage: dokka
-    script: ./gradlew dokka
-  - stage: ank
-    script: ./gradlew :arrow-docs:runAnk
-  - stage: from md to html
+  - stage: doc
     install:
       - bundle install --gemfile modules/docs/arrow-docs/Gemfile --path vendor/bundle
-    script:
-      - travis_wait env BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile bundle exec jekyll build -s modules/docs/arrow-docs/build/site -d modules/docs/arrow-docs/build/_site
+    script: |
+      ./gradlew dokka
+      ./gradlew :arrow-docs:runAnk
+      travis_wait env BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile bundle exec jekyll build -s modules/docs/arrow-docs/build/site -d modules/docs/arrow-docs/build/_site
   - stage: deploy
     script:
     - ./deploy-scripts/deploy.sh
