--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ jobs:
   - stage: build
     script: ./gradlew clean build :arrow-benchmarks-fx:jmhClasses
   - stage: doc
+    before_install:
+      - gem update --system
+      - gem install bundler
     install:
       - bundle install --gemfile modules/docs/arrow-docs/Gemfile --path vendor/bundle
     script: |
