--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
 - oraclejdk8
 
 stages:
-  #- name: build
+  - name: build
   - name: doc
   - name: deploy
     if: branch = master AND type != pull_request
@@ -19,7 +19,7 @@ jobs:
   include:
   - stage: build
     script: ./gradlew clean build :arrow-benchmarks-fx:jmhClasses
-  - stage: doc
+  -
     before_install:
       - gem update --system
       - gem install bundler
