--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ buildscript {
         classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.7"
         classpath "gradle.plugin.io.morethan.jmhreport:gradle-jmh-report:0.9.0"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_version"
+        classpath 'io.arrow-kt:gradle-plugin'
     }
 }
 
