--- a/settings.gradle
+++ b/settings.gradle
@@ -40,6 +40,7 @@ include {
         meta {
             _ 'annotations'
             _ 'meta'
+            _ 'meta-test'
         }
 
         core {
