--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ buildscript {
         // Constants
         ankKotlinVersion = '1.3.11'
         dokka_version = '0.9.18'
-        ktlint_version = '7.3.0'
+        ktlint_version = "0.34.2"
+        ktlint_gradle_version = '8.2.0'
         gradleVersionsPluginVersion = '0.21.0'
         jUnitVersion = '4.12'
         jUnitVintageVersion = '5.4.0'
@@ -56,7 +57,7 @@ buildscript {
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
         classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.7"
         classpath "gradle.plugin.io.morethan.jmhreport:gradle-jmh-report:0.9.0"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_gradle_version"
     }
 }
 
@@ -87,6 +88,10 @@ subprojects { project ->
     apply plugin: 'kotlin'
     apply plugin: 'org.jetbrains.dokka'
     apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    ktlint {
+        version = ktlint_version
+    }
 
     archivesBaseName = POM_ARTIFACT_ID
 
