--- a/settings.gradle
+++ b/settings.gradle
@@ -50,6 +50,7 @@ include {
             _ 'kindedj'
             _ 'syntax'
             _ 'test'
+            _ 'plugin-test'
         }
 
         mtl {
