--- a/modules/core/arrow-core/build.gradle
+++ b/modules/core/arrow-core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'kotlin-kapt'
+apply plugin: "arrow.meta.plugin.gradle"
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
@@ -14,3 +15,7 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+
+compileKotlin {
+    kotlinOptions.freeCompilerArgs = ["-Xplugin=/Users/raulraja/workspace/arrow/arrow/modules/meta/arrow-meta-prototype/compiler-plugin/build/libs/compiler-plugin.jar"]
+}
