--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=arrow-kt
 POM_DEVELOPER_NAME=The Arrow Authors
+
+kapt.use.worker.api=true
