--- a/modules/meta/arrow-meta-prototype/gradle-plugin/build.gradle
+++ b/modules/meta/arrow-meta-prototype/gradle-plugin/build.gradle
@@ -5,6 +5,7 @@ plugins {
   id 'com.jfrog.bintray' version "1.8.4"
 }
 apply plugin: 'kotlin'
+//apply from: "$rootDir/gradle-plugin/plugin-marker/pluginMarker.gradle"
 
 project.group = 'io.arrow-kt'
 project.version = '0.0.1'
@@ -14,6 +15,7 @@ dependencies {
   implementation gradleApi()
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-gradle-plugin-api:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   compileOnly project(":compiler-plugin") { "embeddable" }
 }
 
@@ -26,7 +28,7 @@ compileTestKotlin {
 
 jar {
   // Embed compiler plugin in jar
-  configurations.named("compileClasspath").get().find { it.name.startsWith("compiler-plugin") }
+  from configurations.named("compileClasspath").get().find { it.name.startsWith("compiler-plugin") }
 
   manifest {
     attributes["Specification-Title"] = project.name
@@ -40,6 +42,8 @@ jar {
 tasks.withType(PluginUnderTestMetadata).configureEach {
   pluginClasspath.from(configurations.compileOnly)
 }
+
+//pluginMarkerProject('compiler-plugin')
 
 gradlePlugin {
   plugins {
