--- a/modules/meta/arrow-meta-test/gradle.properties
+++ b/modules/meta/arrow-meta-test/gradle.properties
@@ -1,4 +1,4 @@
 # Maven publishing configuration
-POM_NAME=Arrow Core Data
-POM_ARTIFACT_ID=arrow-core-data
+POM_NAME=Arrowff
+POM_ARTIFACT_ID=arrow-meta-test
 POM_PACKAGING=jar
