--- a/modules/meta/arrow-meta-test/build.gradle
+++ b/modules/meta/arrow-meta-test/build.gradle
@@ -1,21 +1,22 @@
 buildscript {
-    dependencies{
-        classpath 'io.arrow-kt:gradle-plugin'
-    }
+  dependencies {
+    classpath 'io.arrow-kt:gradle-plugin'
+  }
 
-    repositories {
-        mavenCentral()
-    }
+  repositories {
+    mavenLocal()
+    mavenCentral()
+  }
 }
 
 apply plugin: 'kotlin-kapt'
 apply plugin: "arrow.meta.plugin.gradle"
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-//    compile project(':arrow-optics')
-//    compile project(':arrow-annotations')
-//    kapt project(':arrow-meta')
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+//    compile project(':arrow-core')
+  compile project(':arrow-annotations')
+  kapt project(':arrow-meta')
 //    kaptTest project(':arrow-meta')
 //    compileOnly project(':arrow-meta')
 //    testCompileOnly project(':arrow-meta')
@@ -30,5 +31,5 @@ dependencies {
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
 compileKotlin {
-    kotlinOptions.freeCompilerArgs = ["-Xplugin=/Users/simonvergauwen/Projects/arrow/modules/meta/arrow-meta-prototype/compiler-plugin/build/libs/compiler-plugin.jar"]
+  kotlinOptions.freeCompilerArgs = ["-Xplugin=/Users/ulti_mate/IdeaProjects/Arrow_with_Access/arrow/modules/meta/arrow-meta-prototype/compiler-plugin/build/libs/compiler-plugin.jar"]
 }
