--- a/modules/meta/arrow-meta-prototype/testing-plugin/build.gradle
+++ b/modules/meta/arrow-meta-prototype/testing-plugin/build.gradle
@@ -14,6 +14,8 @@ buildscript {
 }
 
 dependencies {
+    testRuntime project(":compiler-plugin")
+
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compileOnly "io.github.classgraph:classgraph:$classGraphVersion"
     implementation "org.assertj:assertj-core:$assertjVersion"
