--- a/build.gradle
+++ b/build.gradle
@@ -239,6 +239,21 @@ task checkDependenciesVersion {
     dependsOn dependencyUpdates
 }
 
+task buildMeta {
+    [
+            ":idea-plugin:clean",
+            ":gradle-plugin:clean",
+            ":compiler-plugin:clean",
+            ":idea-plugin:build",
+            ":gradle-plugin:build",
+            ":compiler-plugin:build",
+            ":gradle-plugin:publishArrowPluginMarkerMavenPublicationToMavenLocal",
+            ':gradle-plugin:publishPluginMavenPublicationToMavenLocal'
+    ].each { taskName ->
+        dependsOn gradle.includedBuild('arrow-meta-prototype').task(taskName)
+    }
+}
+
 task publishAndRunIde {
     [
      ":idea-plugin:clean",
