--- a/modules/docs/arrow-docs/docs/_data/doc-versions.yml
+++ b/modules/docs/arrow-docs/docs/_data/doc-versions.yml
@@ -4,11 +4,11 @@ docVersions:
       url: https://0-8-2.arrow-kt.io/
       previous: https://0-8-0.arrow-kt.io/
 
-    - title: "v0.9.0"
+    - title: "v0.10.1"
       url: https://arrow-kt.io/
       previous: https://0-8-2.arrow-kt.io/
 
-    - title: "v0.10.0"
+    - title: "v0.10.2-SNAPSHOT"
       url: https://next.arrow-kt.io/
       previous: https://arrow-kt.io/
 
