--- a/modules/meta/arrow-meta-prototype/compiler-plugin/build.gradle
+++ b/modules/meta/arrow-meta-prototype/compiler-plugin/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compileOnly "com.intellij:openapi:7.0.3"
 
     testImplementation "io.kotlintest:kotlintest-runner-junit4:$kotlin_test_version"
+    testImplementation "org.assertj:assertj-core:$assertj_version"
     testImplementation project(":testing-plugin")
     testRuntimeOnly project(":compiler-plugin")
 }
