--- a/modules/meta/arrow-meta-prototype/compiler-plugin/build.gradle
+++ b/modules/meta/arrow-meta-prototype/compiler-plugin/build.gradle
@@ -11,6 +11,10 @@ dependencies {
     testImplementation "org.assertj:assertj-core:$assertj_version"
     testImplementation project(":testing-plugin")
     testRuntimeOnly project(":compiler-plugin")
+
+    // TODO temporary configuration
+    // Remove when having an arrow-annotations release from testing-plugin
+    testRuntimeOnly "com.github.arrow-kt.arrow:arrow-annotations:rr-meta-prototype-integration-SNAPSHOT"
 }
 
 compileKotlin {
@@ -43,6 +47,7 @@ shadowJar {
 // A temporary version from a fork of
 // com.github.tschuchortdev:kotlin-compile-testing
 // is needed until it's published with the contribution
+// Remove when having only releases from Maven Central
 repositories {
     maven { url "https://jitpack.io" }
 }
