KIO moved to jitpack.io repository

--- a/modules/benchmarks/arrow-benchmarks-fx/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-fx/build.gradle
@@ -1,5 +1,5 @@
 repositories {
-    maven { url "http://www.msec.it/maven-repository/" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
