Give the IDE a reasonable amount of memory, it's indexing a lot of Kotlin afterall

--- a/modules/meta/arrow-meta-prototype/idea-plugin/build.gradle
+++ b/modules/meta/arrow-meta-prototype/idea-plugin/build.gradle
@@ -37,3 +37,7 @@ patchPluginXml {
       Add change notes here.<br>
       <em>most HTML tags may be used</em>"""
 }
+
+runIde {
+    jvmArgs '-Xmx2G'
+}
