Control the cache refresh with a project component. Cleanup lifecycle handling of the fragment provider: - use injected projec, don't guess - listen to vfs events in FragmentProviderComponent - initialize cache once when the project is opened

--- a/modules/meta/arrow-meta-prototype/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/modules/meta/arrow-meta-prototype/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -22,6 +22,9 @@
         <component>
             <implementation-class>arrow.meta.plugin.idea.MetaPluginRegistrarComponent</implementation-class>
         </component>
+        <component>
+            <implementation-class>arrow.meta.plugin.idea.phases.resolve.FragmentProviderComponent</implementation-class>
+        </component>
     </project-components>
 
     <extensions defaultExtensionNs="org.jetbrains.kotlin">
