Modifies layout for incubator datatypes

--- a/modules/docs/arrow-docs/docs/_data/sidebar-incubator.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar-incubator.yml
@@ -83,7 +83,7 @@ options:
       - title: Fix
         url: /docs/recursion/fix/
 
-  - title: Type Classes
+  - title: Data Types
 
     nested_options:
 
