Adds Books section description and navbar icon pointing to arrow site

--- a/arrow-site/blog/_data/commons.yml
+++ b/arrow-site/blog/_data/commons.yml
@@ -3,3 +3,4 @@ title: "Λrrow media"
 description: "Functional companion to Kotlin's Standard Library"
 keywords: "functional-programming, kotlin-library, monads, monad-transformers, functional-data-structure, kotlin, fp-types, adt, free-monads, tagless-final, mtl, for-comprehension, category-theory"
 google_analytics: "UA-18433785-18"
+arrow-site: https://arrow-kt.io/
