--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ jdk:
 - oraclejdk8
 
 stages:
+- name: unblock
+  if: type == pull_request
 - name: deploy
   if: branch = master AND type != pull_request
 
@@ -15,6 +17,8 @@ env:
 
 jobs:
   include:
+  - stage: unblock
+    script: echo "Unblock PR"
   - stage: deploy
     script:
     - ./gradlew clean build
