[wip] initial implementation of bounded queue

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ gen-external-apklibs
 .idea/**/gradle.xml
 .idea/**/libraries
 
+#Kotlintest
+**/.kotlintest
+
 # Mongo Explorer plugin:
 .idea/**/mongoSettings.xml
 
