--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@
 
 import com.github.benmanes.gradle.versions.reporter.PlainTextReporter
 
+apply plugin: 'java'
+apply plugin: 'ru.vyarus.animalsniffer'
 buildscript {
     ext {
         // Constants
@@ -60,7 +62,11 @@ buildscript {
         classpath "gradle.plugin.io.morethan.jmhreport:gradle-jmh-report:0.9.0"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_gradle_version"
         classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfuVersion"
+        classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.5.0'
     }
+}
+dependencies {
+    signature 'net.sf.androidscents.signature:android-api-level-14:4.0_r4@signature'
 }
 
 def pathApiDocs = "${rootDir}/modules/docs/arrow-docs/docs/docs/apidocs"
@@ -218,10 +224,10 @@ dependencyUpdates {
         final disallowedQualifiers = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'eap']
         final isDisallowed = { dependency -> { qualifier -> dependency.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/ } }
         final dependencies = result.current.dependencies
-            .plus(result.outdated.dependencies)
-            .plus(result.exceeded.dependencies)
-            .plus(result.unresolved.dependencies)
-            .findAll { dependency -> dependenciesToCheck.any { it == "${dependency.group}:${dependency.name}" } }
+                .plus(result.outdated.dependencies)
+                .plus(result.exceeded.dependencies)
+                .plus(result.unresolved.dependencies)
+                .findAll { dependency -> dependenciesToCheck.any { it == "${dependency.group}:${dependency.name}" } }
 
         def plainTextReporter = new PlainTextReporter(project, revision, gradleReleaseChannel)
         plainTextReporter.write(System.out, result)
@@ -233,8 +239,8 @@ dependencyUpdates {
             final title = "\nError: Kotlin and Coroutines must depends on release version!"
             final message = dependencies
                     .inject(title) { acc, dependency ->
-                "$acc\n${dependency.group}:${dependency.name}:${dependency.version}"
-            }
+                        "$acc\n${dependency.group}:${dependency.name}:${dependency.version}"
+                    }
 
             throw new GradleException(message)
         }
