Add gradlew check to bitrise and Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,4 @@ jobs:
         java -version
         ./gradlew -v
         ./gradlew clean build :arrow-benchmarks-fx:jmhClasses
+        ./gradlew check
