--- a/build.gradle
+++ b/build.gradle
@@ -65,11 +65,8 @@ buildscript {
 }
 
 def pathApiDocs = "${rootDir}/modules/docs/arrow-docs/docs/docs/apidocs"
-
 allprojects {
     apply plugin: 'base'
-    apply plugin: 'java'
-    apply plugin: 'ru.vyarus.animalsniffer'
 
     clean.doFirst {
         delete "${rootDir}/infographic/arrow-infographic.txt"
@@ -83,11 +80,17 @@ allprojects {
         maven { url "https://dl.bintray.com/arrow-kt/arrow-kt" }
         maven { url "https://dl.bintray.com/jetbrains/markdown/" }
     }
+}
+
+configure(allprojects - project("arrow-meta") - project("arrow-ank-gradle") - project("arrow-kio-benchmarks")) {
+    apply plugin: 'java'
+    apply plugin: 'ru.vyarus.animalsniffer'
     dependencies {
         signature 'net.sf.androidscents.signature:android-api-level-14:4.0_r4@signature'
     }
 }
 
+def animalSnifferWhitelist = ["project ':arrow-ank-gradle'", "project ':arrow-meta'", "project ':arrow-kio-benchmarks'"]
 subprojects { project ->
 
     group = GROUP
